# COOLPI

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: coolpi_api.md.html  index.md.html
.github/workflows/md/: markdeep.min.js
coolpi.egg-info/: SOURCES.txt
doc/: coolpi_api.md
docs/: CNAME  index.html
docs/md/: INDIGO.css
graffiti_image_processing/: Automatic_image_processing.ipynb  automatic_image_processing.py
graffiti_image_processing/data/RGB_to_XYZ/: rgb_to_xyz_nikon_z7ii.csv
notebooks/: 01_CIE_objects.ipynb  02a_Colour_objects.ipynb  02b_CSC_Colour_Space_Conversion.ipynb  02c_CSC-Test_data_(Ohta&Robertson_2005).ipynb  02c_CSC_Test_data.ipynb  03a_Spectral_objects.ipynb  04a_Colour-difference.ipynb  04b_CIEDE2000_Test_data.ipynb  04b_CIEDE2000_Test_data_(Sharma_et_al_2005).ipynb  05_ColourChecker_objects.ipynb  06_Image_objects.ipynb
notebooks/res/csv/: Calibrite_Classic_24_2022-03-11_10-13-40_LAB.csv  GM_24_XYZ_d65_2.csv  XRCCPP_RAW_RGB.csv
notebooks/res/json/: CCC_24_LAB_d65_2.json  CCC_export_data_LAB.json  GM_24_XYZ_d65_2.json  GM_export_data_XYZ.json  XRCCPP_RAW_RGB.json  XRCCPP_export_data.json  XRCCPP_export_data_RGB.json  XRCCPP_reflectance.json
src/coolpi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coolpi/auxiliary/: common_operations.py  errors.py  export_data.py  load_data.py  plot.py
src/coolpi/colour/: cat_models.py  cct_operations.py  cie_colour_spectral.py  colour_difference.py  colour_space_conversion.py  lambda_operations.py
src/coolpi/data/cie/: cie_cfb.json  cie_cmf.json  cie_rgbcmf.json  cie_s_ctt.json  cie_spd.json  cie_white_point.json
src/coolpi/data/colourchecker/XYZ/: colour_checker_xyz_data.json
src/coolpi/data/colourchecker/coordinates/: patches_coordinates.json
src/coolpi/data/colourchecker/reflectance/: colour_checker_reflectance_data.json
src/coolpi/gui/: app.py  config.py  controller.py  gui.py  model.py
src/coolpi/gui/assets/config/: config.json
src/coolpi/gui/data/csv/: rgb_to_xyz_test.csv
src/coolpi/gui/data/json/: spectral_sample_Ohta.json
src/coolpi/gui/data/spd/: JND65_Sekonic.json
src/coolpi/image/: colourchecker.py  colourchecker_detection.py  image_objects.py  patch_extraction.py  raw_colour_correction.py  raw_image_assessment.py  raw_operations.py  raw_processing.py  white_balance.py
tests/coolpi-gui-test/: test_gui.py
tests/coolpi-gui-test/data/csv/: rgb_to_xyz_test.csv
tests/coolpi-gui-test/data/json/: XRCCPP_measured_reflectance_sample.json  spectral_sample_C3.json
wpp_data/: NIKON_D5600_Model.ipynb  RGB-to-XYZ_Model.ipynb  data_link.txt
wpp_data/res/csv/: ND_ODS.csv  ND_WPPDS.csv  NZ_WPPDS.csv  NikonD5600_LR_Data.csv  NikonD5600_WPP_Data.csv  NikonZ7ii_LR_Data.csv  NikonZ7ii_WPP_Data.csv
wpp_data/res/spd/: INDIGO-C7000-A_029_02°_3066K.csv  INDIGO-C7000-A_030_02°_5027K.csv  INDIGO-C7000-A_032_02°_5011K.csv  INDIGO-C7000-A_033_02°_3064K.csv  INDIGO-C7000-A_038_02°_5557K.csv  SPD_JNA_015_02°_2681K.csv  SPD_JND50_017_02°_4963K.csv  SPD_JND65_014_02°_6658K.csv  SPD_JNF_016_02°_3872K.csv
